// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/FileUploader Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r4:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r4:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5 dummyClassname "
       lang="en"
       data-testid="123ID"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id="htmlId"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for="htmlId"
        >
          Legg til fil
        </label>
        <input data-testid="123ID-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  dummyClassname">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r28:"
            class="_dropZone_6otu2_14 _dropZone_error_6otu2_29 "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r28:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 dummyClassname">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          feil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithError play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <label id="labelId-:rs:"
           class="_label_348na_5"
           for=":rr:"
    >
      Hemmelig kode
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:rs:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rt:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rt:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":rr:"
            class="_dropZone_6otu2_14 _dropZone_error_6otu2_29 "
            aria-describedby=":rr:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":rr:"
        >
          Legg til fil(er)
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               multiple
               hidden
        >
      </div>
    </button>
    <span id=":rr:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .java, .cpp, .py
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 ">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          Du må laste opp en fil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithFileChange play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  "
       data-testid="testid123"
  >
    <label id="labelId-:r1t:"
           class="_label_348na_5"
           for=":r1s:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r1t:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r1u:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r1u:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1s:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r1s:"
        >
          Legg til fil
        </label>
        <input data-testid="testid123-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r20:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <a id=":r20:-file-file.txt"
               class="_link_1qzdp_1  _fileListText_10ro3_34"
               href="#"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qzdp_35 _icon_isCustom_1qzdp_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              file.txt
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1 _successIconLinkMargin_10ro3_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r22:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r22:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":r20:-file-file.txt"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r23:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r23:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
      Kunne ikke fjerne fil
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <label id="labelId-:r25:"
           class="_label_348na_5"
           for=":r24:"
    >
      Last opp filer
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r25:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r26:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r26:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r24:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r24:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithIsUploading smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":rq:"
            class="_dropZone_6otu2_14  "
            disabled
    >
      <div class="_removePointerEvents_6otu2_81">
        <div aria-live="polite"
             aria-atomic="true"
             class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28  "
        >
          <div class="_spinnerAnimation_wnf1f_40 ">
          </div>
          <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 _spinner_6otu2_89">
            Opplasting pågår
          </span>
        </div>
        <label class="_innerLabel_6otu2_95"
               for=":rq:"
        >
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  "
       id="dummyIdForwardedFromRef"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r0:"
            class="_dropZone_6otu2_14  "
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r0:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithTextOverrides play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1m:"
            class="_dropZone_6otu2_14  "
            aria-describedby=":r1m:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r1m:"
        >
          Trykk eller dra og slipp filer her
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept="image/png"
               hidden
        >
      </div>
    </button>
    <span id=":r1m:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Tillatte filformater:_
      <span class="_fileFormatList_6otu2_71">
        bilder og dokumenter
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r1o:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <span class="_fileListText_10ro3_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_10ro3_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1p:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1p:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r1o:-file-document.pdf"
                    class="_fileListFile_10ro3_50"
              >
                document.pdf
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1q:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1q:">
                  lastet opp
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":r1o:-file-document.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1r:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1r:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadResult smoke-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5 bottomSpacingXL ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r10:"
            class="_dropZone_6otu2_14  "
            aria-describedby=":r10:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r10:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               hidden
        >
      </div>
    </button>
    <span id=":r10:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .java, .cpp, .py
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="_alert_1xb9d_1 _alert_success_1xb9d_42 _alert_6otu2_85">
        <span class="_iconWrapper_1xb9d_6">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
            </path>
          </svg>
        </span>
        <span class="_content_1xb9d_15">
          Lastet opp 4 filer
        </span>
      </div>
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r13:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <a id=":r13:-file-dokumentasjon.pdf"
               class="_link_1qzdp_1  _fileListText_10ro3_34"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qzdp_35 _icon_isCustom_1qzdp_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1 _successIconLinkMargin_10ro3_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r15:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r15:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":r13:-file-dokumentasjon.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r16:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r16:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":r17:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <span class="_fileListText_10ro3_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_10ro3_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r18:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r18:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r17:-file-grunnlag.jpg"
                    class="_fileListFile_10ro3_50"
              >
                grunnlag.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r19:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r19:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":r17:-file-grunnlag.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1a:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1a:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
  <div class="_container_6otu2_5  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1b:"
            class="_dropZone_6otu2_14  "
            aria-describedby=":r1b:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r1b:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               hidden
        >
      </div>
    </button>
    <span id=":r1b:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .java, .cpp, .py
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="_alert_1xb9d_1 _alert_warning_1xb9d_56 _alert_6otu2_85">
        <span class="_iconWrapper_1xb9d_6">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
        </span>
        <span class="_content_1xb9d_15">
          1 av 3 filer ble stoppet av virussjekk.
        </span>
      </div>
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":r1e:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <a id=":r1e:-file-dokumentasjon.pdf"
               class="_link_1qzdp_1  _fileListText_10ro3_34"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qzdp_35 _icon_isCustom_1qzdp_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1 _successIconLinkMargin_10ro3_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r1g:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r1g:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":r1e:-file-dokumentasjon.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1h:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1h:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":r1i:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <span class="_fileListText_10ro3_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_10ro3_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1j:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1j:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r1i:-file-grunnlag.jpg"
                    class="_fileListFile_10ro3_50"
              >
                grunnlag.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1k:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1k:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":r1i:-file-grunnlag.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1l:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1l:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadedFiles play-test 1`] = `
<div data-test-block="true">
  <div class="_container_6otu2_5  ">
    <label id="labelId-:r7:"
           class="_label_348na_5"
           for=":r6:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="labelId-:r7:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r8:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r8:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r6:"
            class="_dropZone_6otu2_14  "
            aria-describedby=":r6:-accepted-formats"
    >
      <div class="_removePointerEvents_6otu2_81">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_6otu2_10"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="_innerLabel_6otu2_95"
               for=":r6:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".pdf, .jpeg"
               hidden
        >
      </div>
    </button>
    <span id=":r6:-accepted-formats"
          class="_fileInfo_6otu2_54"
    >
      Filer du kan laste opp:
      <span class="_fileFormatList_6otu2_71">
        .pdf, .jpeg
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="_fileList_6otu2_75">
      <li id=":ra:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <a id=":ra:-file-dokumentasjon.pdf"
               class="_link_1qzdp_1  _fileListText_10ro3_34"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qzdp_35 _icon_isCustom_1qzdp_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1 _successIconLinkMargin_10ro3_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rc:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rc:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":ra:-file-dokumentasjon.pdf"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rd:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rd:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":re:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <span class="_fileListText_10ro3_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_10ro3_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rf:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rf:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":re:-file-grunnlag.jpg"
                    class="_fileListFile_10ro3_50"
              >
                grunnlag.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rg:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rg:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":re:-file-grunnlag.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rh:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rh:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":ri:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <span class="_fileListText_10ro3_34">
              <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _fileListIcon_10ro3_39"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rj:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rj:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":ri:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
                    class="_fileListFile_10ro3_50"
              >
                Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg
              </span>
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rk:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rk:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":ri:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":rm:"
          class="_fileListItem_10ro3_27 "
      >
        <div class="_fileListContainer_10ro3_43">
          <span class="_fileListGrid_10ro3_30">
            <a id=":rm:-file-test.png"
               class="_link_1qzdp_1  _fileListText_10ro3_34"
               href="http://localhost:4400/designsystem_illustrasjon.png"
               download
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qzdp_35 _icon_isCustom_1qzdp_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              test.png
            </a>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _successIcon_10ro3_1 _successIconLinkMargin_10ro3_5"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:ro:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:ro:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="_button_g87u5_1 _button_medium_g87u5_45  _cancelIcon_10ro3_9"
                    type="button"
                    aria-describedby=":rm:-file-test.png"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rp:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rp:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="_srOnly_6otu2_59"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
